K框架/model/my_tests/block/t1.rs
decl ptr ;  
{
  decl x;    
  transfer newResource(copy) x;  
  ptr borrow x;  
  {
	  decl a;
	  a; //error
  } 
}
